# CodingAssistAgent

./: README.md  agent.py  app.py  get_tool_via_llm.py  prompts.py  pyproject.toml  test_get_file_content.py  test_get_files_info.py  test_run_python_file.py  test_write_file.py  toolkit.py
calculator/: lorem.txt
tools/: get_file_content.py  get_files_info.py  replace_in_file.py  run_python_file.py  write_file.py
